Fix broken dpdk dependencies in packages built by gitlab.
packages.wand.net.nz provides a more recent version of dpdk for
some distros, which will create dependencies with bad package
names (due to dpdk being terrible at maintaining a consistent
package naming scheme). Since we don't want to have to tell
users to add packages.wand.net.nz to their sources list anymore,
we need to make sure it is not used when building the packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtrace4 (4.0.6-2) unstable; urgency=low
+
+  * Fix bad dpdk dependencies in libtrace4 package
+
+ -- Shane Alcock <shane.alcock@waikato.ac.nz>  Wed, 16 Jan 2019 16:49:04 +1300
+
 libtrace4 (4.0.6-1) unstable; urgency=low
 
   * New upstream release
