Fix documentation error in traceanon manpage

--- a/tools/traceanon/traceanon.1
+++ b/tools/traceanon/traceanon.1
@@ -51,7 +51,7 @@ sets the number of processing threads used to read from the input source.
 .TP
 .PD 0
 .BR "filterstring " (top-level)
-ignores all packets that do match the given BPF filter.
+ignores all packets that do NOT match the given BPF filter.
 
 .TP
 .PD 0
