--- a/tools/tracemcast/tracemcast.1
+++ b/tools/tracemcast/tracemcast.1
@@ -20,11 +20,41 @@ of the captured packets.
 This allows the sharing of a capture source that would normally only allow
 one program to read from it at a time.
 
-The multicasting protocol is the ndag protocol, which libtrace supports as
+The multicasting protocol is the nDAG protocol, which libtrace supports as
 an input format, so libtrace programs can natively receive packets from a
 tracemcast group without any additional modifications.
 
-TODO: add descriptions of option flags
+.TP
+\fB\-m\fR <monitor identifier>
+set a unique identifier that will be included in the nDAG header. This is used
+by the recipient to tell which multicast sender emitted the packet.
+
+.TP
+\fB\-f\fR <filterstring>
+only emit packets that match this BPF filter expression.
+
+.TP
+\fB\-g\fR <address>
+emit packets to this multicast group address (e.g. 224.0.0.1).
+
+.TP
+\fB\-p\fR <port>
+send nDAG beacon messages to this port number.
+
+.TP
+\fB\-s\fR <address>
+use the interface that owns this IP address to multicast packets.
+
+.TP
+\fB\-t\fR <threads>
+sets the number of threads to use for capturing and multicasting packets.
+Each thread will produce a separate multicast stream on a unique port.
+
+.TP
+\fB\-M\fR <bytes>
+do not create any nDAG multicast messages larger than this number of bytes.
+Don't forget to allow for additional encapsulation (e.g. Ethernet, IP, UDP)
+when determining this value.
 
 .SH LINKS
 More details about tracemcast (and libtrace) can be found at
