Force libwandder2 dependency for debian packages
This is in line with what we are doing with the RPMs anyway
(rightly or wrongly).

It also means that we are finally ready to bite the bullet wrt
libwandder2 support in OpenLI as well.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libtrace4 (4.0.14-2) unstable; urgency=medium
+
+  * Force libwandder2 as a dependency over libwandder1, to ensure
+    consistency with upcoming OpenLI release.
+
+ -- Shane Alcock <shane.alcock@waikato.ac.nz>  Fri, 04 Sep 2020 15:59:19 +1200
+
 libtrace4 (4.0.14-1) unstable; urgency=medium
 
   * New upstream release.
