--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+
+ -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
+
 libtrace4 (4.0.16-1) unstable; urgency=medium
 
   * Add support for PF_RING.
