--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
 
   * Trim trailing whitespace.
   * Use secure URI in Homepage field.
+  * Bump debhelper from deprecated 9 to 12.
 
  -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
 
