--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
   * Use secure URI in Homepage field.
   * Bump debhelper from deprecated 9 to 12.
   * Set debhelper-compat version in Build-Depends.
+  * Fix day-of-week for changelog entry 4.0.0-1.
 
  -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
 
@@ -160,4 +161,4 @@ libtrace4 (4.0.0-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Brad Cowie <brad@wand.net.nz>  Wed, 07 Mar 2016 10:24:40 +1300
+ -- Brad Cowie <brad@wand.net.nz>  Mon, 07 Mar 2016 10:24:40 +1300
