--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
   * Fix day-of-week for changelog entry 4.0.0-1.
   * Remove Section on libtrace4, Section on libpacketdump4 that duplicate
     source.
+  * Avoid explicitly specifying -Wl,--as-needed linker flag.
 
  -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
 
