--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
   * Bump debhelper from deprecated 9 to 12.
   * Set debhelper-compat version in Build-Depends.
   * Fix day-of-week for changelog entry 4.0.0-1.
+  * Remove Section on libtrace4, Section on libpacketdump4 that duplicate
+    source.
 
  -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
 
