--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,19 @@ libtrace4 (4.0.17-1) unstable; urgency=medium
 
  -- Shane Alcock <shane.alcock@waikato.ac.nz>  Fri, 9 Jul 2021 14:09:06 +1200
 
+libtrace4 (4.0.16-2) UNRELEASED; urgency=medium
+
+  * Trim trailing whitespace.
+  * Use secure URI in Homepage field.
+  * Bump debhelper from deprecated 9 to 12.
+  * Set debhelper-compat version in Build-Depends.
+  * Fix day-of-week for changelog entry 4.0.0-1.
+  * Remove Section on libtrace4, Section on libpacketdump4 that duplicate
+    source.
+  * Avoid explicitly specifying -Wl,--as-needed linker flag.
+
+ -- Perry Lorier <perry@windy.meta.net.nz>  Sun, 18 Jul 2021 15:51:11 -0000
+
 libtrace4 (4.0.16-1) unstable; urgency=medium
 
   * Add support for PF_RING.
@@ -168,4 +181,4 @@ libtrace4 (4.0.0-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Brad Cowie <brad@wand.net.nz>  Wed, 07 Mar 2016 10:24:40 +1300
+ -- Brad Cowie <brad@wand.net.nz>  Mon, 07 Mar 2016 10:24:40 +1300
