--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libtrace4 (4.0.20-1) unstable; urgency=medium
+
+  * Updated libpacketdump to be able to decode ETSI LI email CCs and IRIs
+
+ -- Shane Alcock <shane@alcock.co.nz>  Thu, 03 Nov 2022 11:20:06 +1300
+
 libtrace4 (4.0.19-1) unstable; urgency=medium
 
   * Fixed issues with compiling against DPDK 21.11
