--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+libtrace4 (4.0.21-1) unstable; urgency=medium
+
+  * Fixed issue where idle per packets threads would use 100% CPU
+    constantly.
+  * Added new supported file format: etsifile -- to read and write binary
+    files containing ASN.1 encoded ETSI LI intercept records.
+  * Fix numerous build issues on Mac OS X caused by changes in the BPF
+    headers.
+  * Fix bug where packets returned by trace_event() for certain live
+    formats would not work with subsequent API calls.
+
+ -- Shane Alcock <shane@alcock.co.nz>  Wed, 10 May 2023 18:28:13 +1200
+
 libtrace4 (4.0.20-1) unstable; urgency=medium
 
   * Updated XDP module to be able to build against recent libxdp
