--- a/tools/tracemcast/tracemcast.1
+++ b/tools/tracemcast/tracemcast.1
@@ -64,7 +64,7 @@ https://github.com/LibtraceTeam/libtrace/wiki
 libtrace(3), tracesplit(1), tracesplit_dir(1), tracefilter(1),
 traceconvert(1), tracereport(1), tracertstats(1), tracestats(1), 
 tracepktdump(1), traceanon(1), tracesummary(1), tracereplay(1),
-tracediff(1), traceends(1), tracetopends(1), tracemerge(1)
+tracediff(1), traceends(1), tracetopends(1), tracemerge(1), traceucast(1)
 
 .SH AUTHORS
 Shane Alcock <salcock@waikato.ac.nz>
