--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libtrace4 (4.0.25-1) unstable; urgency=medium
+
+  * ndag: fix issue where the most recently received packets may not
+    be delivered to libtrace if the multicast source stops sending.
+
+ -- Shane Alcock <shane@alcock.co.nz>  Fri, 19 Apr 2024 15:42:19 +1200
+
 libtrace4 (4.0.24-1) unstable; urgency=medium
 
   * ndagtcp: fix miscalculation of ERF header length that would
