--- a/AUTHORS
+++ b/AUTHORS
@@ -46,6 +46,8 @@ In no particular order, we would like to recognise:
    code here and there
  * Ryan Cai for patching a bunch of locking bugs.
  * Sam James for fixing some issues with our build system.
+ * Pim van Stam for contributing some improvements to the etsilive format
+   module.
 
 Apologies to anyone that we've missed out or forgotten. If you're really
 offended, fire one of us an email and we'll make sure you are added to the
